added the admin user management functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -86,7 +86,7 @@
   <a routerLink="/services">Services</a>
 </nav>
 <router-outlet></router-outlet>
-<div>
+<!-- <div>
   <h1>Users</h1>
   <ul>
     <li *ngFor="let user of users">{{ user.KFUserName }} - {{ user.KFUserEmail }}</li>
@@ -103,6 +103,6 @@
     <button type="submit">Add User</button>
   </form> 
 
-</div>
+</div> -->
 
 <router-outlet></router-outlet>
