--- a/src/app/i-login/i-login.component.html
+++ b/src/app/i-login/i-login.component.html
@@ -1,6 +1,6 @@
 
 <h2>Login</h2>
-<form (ngSubmit)="onLogin()">
+  <form (ngSubmit)="login()">
   <div>
     <label for="username">Username:</label>
     <input type="text" id="username" [(ngModel)]="username" name="username">
@@ -10,6 +10,9 @@
     <input type="password" id="password" [(ngModel)]="password" name="password">
   </div>
   <button type="submit">Login</button>
-  <div *ngIf="loginFailed">Login failed. Please try again.</div>
-</form>
+  </form>
+
+  
+<!-- <form (ngSubmit)="onLogin()"> -->
+  <!-- <div *ngIf="loginFailed">Login failed. Please try again.</div> -->
 
