--- a/src/app/i-login/i-login.component.html
+++ b/src/app/i-login/i-login.component.html
@@ -1,16 +1,20 @@
 
-<h2>Login</h2>
-  <form (ngSubmit)="login()">
-  <div>
-    <label for="username">Username:</label>
-    <input type="text" id="username" [(ngModel)]="username" name="username">
+
+  <div class="loginContainer">
+    <h2>Login</h2>
+    <form (ngSubmit)="login()" id="_loginForm" class="_loginFormAll">
+      <div>
+        <label for="username">Username:</label>
+        <input type="text" id="username" [(ngModel)]="username" name="username">
+      </div>
+      <div>
+        <label for="password">Password:</label>
+        <input type="password" id="password" [(ngModel)]="password" name="password">
+      </div>
+      <button type="submit" class="loginButton">Login</button>
+      </form>
+
   </div>
-  <div>
-    <label for="password">Password:</label>
-    <input type="password" id="password" [(ngModel)]="password" name="password">
-  </div>
-  <button type="submit">Login</button>
-  </form>
 
   
 <!-- <form (ngSubmit)="onLogin()"> -->
