--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,91 +1,18 @@
 
-<!-- <style>
-  :host {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    font-size: 14px;
-    color: #333;
-    box-sizing: border-box;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
+<header>
+  <nav>
+    <a routerLink="/login">Login</a>
+  </nav>
+</header>
 
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    margin: 8px 0;
-  }
+<main>
+  <router-outlet></router-outlet>
+</main>
 
-  p {
-    margin: 0;
-  }
-
-  .spacer {
-    flex: 1;
-  }
-
-  a,
-  a:visited,
-  a:hover {
-    color: #1976d2;
-    text-decoration: none;
-  }
-
-  a:hover {
-    color: #125699;
-  }
-
-
-  footer {
-    margin-top: 8px;
-    display: flex;
-    align-items: center;
-    line-height: 20px;
-  }
-
-  footer a {
-    display: flex;
-    align-items: center;
-  } -->
-
-  
-<!-- 
-  /* Responsive Styles 
-  @media screen and (max-width: 767px) {
-    .card-container > *:not(.circle-link) ,
-    .terminal {
-      width: 100%;
-    }
-
-    .card:not(.highlight-card) {
-      height: 16px;
-      margin: 8px 0;
-    }
-
-    .card.highlight-card span {
-      margin-left: 72px;
-    }
-
-    svg#rocket-smoke {
-      right: 120px;
-      transform: rotate(-5deg);
-    }
-  }
-
-  @media screen and (max-width: 575px) {
-    svg#rocket-smoke {
-      display: none;
-      visibility: hidden;
-    }
-  }**/
-</style> -->
-<nav>
-  <a routerLink="/login">Login</a><br>
-  <a routerLink="/services">Services</a>
-</nav>
-<router-outlet></router-outlet>
+<footer>
+  <p>&copy; 2024 Kakarla Dairy Farms. All rights reserved.</p>
+  <p>Contact us at <a href="mailto:contact@kdf.com">contact@yourcompany.com</a></p>
+</footer>
 <!-- <div>
   <h1>Users</h1>
   <ul>
@@ -104,5 +31,3 @@
   </form> 
 
 </div> -->
-
-<router-outlet></router-outlet>
