--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,12 @@
 
 <header>
   <nav>
-    <a routerLink="/login">Login</a>
+    <div class="nav-left">
+      <img src="Resources/Logo/MainLogo.png" alt="Company Logo" class="logo">
+    </div>
+    <div class="nav-right">
+      <a routerLink="/login">Login</a>
+    </div>
   </nav>
 </header>
 
