--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,11 +6,17 @@ header {
     text-align: center;
   }
   
-  header nav a {
+  /* header nav a {
     margin: 0 1rem;
     text-decoration: none;
     color: #007bff;
+  } */
+  nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
+  
 
   .nav-left {
     display: flex;
@@ -20,6 +26,11 @@ header {
   .logo {
     height: 50px;
     /* Adjust the size as needed */
+  }
+
+  .nav-right {
+    display: flex;
+    align-items: center;
   }
   
   .nav-right a {
