--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <header>
   <nav>
     <div class="nav-left">
-      <img src="Resources/Logo/MainLogo.png" alt="Company Logo" class="logo">
+      <img src="assets/Logo/MainLogo.png" alt="Company Logo" class="logo">
     </div>
     <div class="nav-right">
       <a routerLink="/login">Login</a>
