--- a/src/app/i-login-service/i-login-service.component.html
+++ b/src/app/i-login-service/i-login-service.component.html
@@ -1,8 +1,9 @@
-<!-- services-home.component.html -->
-
 <div class="banner">
-  <h1>Welcome to Our Services</h1>
-  <p>Discover what we offer</p>
+  <img src="assets/Images/FarmImage2.jpg" alt="Banner Image" class="banner-image">
+  <div class="banner-content">
+    <h1>Welcome to Our Services</h1>
+    <p>Discover what we offer</p>
+  </div>
 </div>
 
 <div class="services-container">
