--- a/src/app/i-login/i-login.component.html
+++ b/src/app/i-login/i-login.component.html
@@ -1,4 +1,4 @@
-
+<!-- 
 
   <div class="loginContainer">
     <h2>Login</h2>
@@ -19,4 +19,15 @@
   
 <!-- <form (ngSubmit)="onLogin()"> -->
   <!-- <div *ngIf="loginFailed">Login failed. Please try again.</div> -->
+ -->
 
+ <div class="loginContainer">
+  <p class="sign" align="center">Sign in</p>
+  <form (ngSubmit)="login()" id="_loginForm" class="_loginFormAll">
+    <input class="username " type="text" id="username" [(ngModel)]="username" align="center" placeholder="Username" name="username">
+    <input class="password" type="password" id="password" [(ngModel)]="password" align="center" placeholder="Password" name="password">
+    <a class="submit" align="center" (click)="login()">Sign in</a>
+    <p class="forgot" align="center"><a href="#">Forgot Password?</a></p>
+  </form>       
+              
+  </div>
