admin page changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
 
 <footer>
   <p>&copy; 2024 Kakarla Dairy Farms. All rights reserved.</p>
-  <p>Contact us at <a href="mailto:contact@kdf.com">contact@yourcompany.com</a></p>
+  <p>Contact us at <a href="mailto:contact@kdf.com">contact@kdf.com</a></p>
 </footer>
 <!-- <div>
   <h1>Users</h1>
