--- a/src/admin-user-management/admin-user-management.component.html
+++ b/src/admin-user-management/admin-user-management.component.html
@@ -1,29 +1,60 @@
-<div>
-    <h1>User Management</h1>
-    <ul>
-      <li *ngFor="let user of users">
-        <div *ngIf="editedUser && editedUser.KFUId === user.KFUId; else displayUser">
-          <input [(ngModel)]="editedUser.KFUserName" required />
-          <input [(ngModel)]="editedUser.KFUserEmail" type="email" required />
-          <button (click)="updateUser()">Save</button>
-          <button (click)="cancelEditing()">Cancel</button>
-        </div>
-        <ng-template #displayUser>
-          {{ user.KFUserName }} - {{ user.KFUserEmail }}
-          <button (click)="startEditing(user)">Update</button>
-          <button (click)="deleteUser(user.KFUId)">Delete</button>
-        </ng-template>
-      </li>
-    </ul>
-  
-    <h2>Add User</h2>
-    <form (ngSubmit)="addUser()">
-      <label>Name:
-        <input [(ngModel)]="newUser.KFUserName" name="name" required />
-      </label>
-      <label>Email:
-        <input [(ngModel)]="newUser.KFUserEmail" name="email" type="email" required />
-      </label>
+<!-- admin-user-management.component.html -->
+
+<div class="breadcrumb">
+  <a href="#" (click)="showSection('userManagement'); $event.preventDefault()">User Management</a> / 
+  <a href="#" (click)="showSection('addUser'); $event.preventDefault()">Add User</a>
+</div>
+
+<div *ngIf="currentSection === 'userManagement'">
+  <h2>User Management</h2>
+  <table>
+      <thead>
+          <tr>
+              <th>Name</th>
+              <th>Email</th>
+              <th>Actions</th>
+          </tr>
+      </thead>
+      <tbody>
+          <tr *ngFor="let user of users">
+              <td>{{ user.KFUserName }}</td>
+              <td>{{ user.KFUserEmail }}</td>
+              <td>
+                  <button (click)="startEditing(user)">Edit</button>
+                  <button (click)="deleteUser(user.KFUId)">Delete</button>
+              </td>
+          </tr>
+      </tbody>
+  </table>
+</div>
+
+<div *ngIf="currentSection === 'addUser'">
+  <h2>Add User</h2>
+  <form (ngSubmit)="addUser()">
+      <div>
+          <label for="KFUserName">Name:</label>
+          <input type="text" id="KFUserName" [(ngModel)]="newUser.KFUserName" name="KFUserName" required>
+      </div>
+      <div>
+          <label for="KFUserEmail">Email:</label>
+          <input type="email" id="KFUserEmail" [(ngModel)]="newUser.KFUserEmail" name="KFUserEmail" required>
+      </div>
       <button type="submit">Add User</button>
-    </form>
-  </div>
+  </form>
+</div>
+
+<div *ngIf="currentSection === 'editUser'">
+  <h2>Edit User</h2>
+  <form (ngSubmit)="updateUser()">
+      <div>
+          <label for="editUserName">Name:</label>
+          <input type="text" id="editUserName" [(ngModel)]="editedUser.KFUserName" name="editUserName" required>
+      </div>
+      <div>
+          <label for="editUserEmail">Email:</label>
+          <input type="email" id="editUserEmail" [(ngModel)]="editedUser.KFUserEmail" name="editUserEmail" required>
+      </div>
+      <button type="submit">Save User</button>
+      <button type="button" (click)="cancelEditing()">Cancel</button>
+  </form>
+</div>
