--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -43,13 +43,25 @@ header {
     padding: 1rem;
   }
   
-  footer {
+  /* footer {
     background-color: #f8f9fa;
     padding: 1rem;
     text-align: center;
     position: fixed;
     width: 100%;
     bottom: 0;
+  } */
+
+  footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 40px; /* Adjust based on your footer height */
+    background-color: #333; /* Adjust as needed */
+    color: #fff; /* Adjust as needed */
+    text-align: center;
+    line-height: 20px; /* Align text vertically */
   }
   
   footer a {
