--- a/src/app/i-login/i-login.component.html
+++ b/src/app/i-login/i-login.component.html
@@ -17,17 +17,45 @@
   </div>
 
   
-<!-- <form (ngSubmit)="onLogin()"> -->
+<form (ngSubmit)="onLogin()"> -->
   <!-- <div *ngIf="loginFailed">Login failed. Please try again.</div> -->
- -->
+ 
 
  <div class="loginContainer">
-  <p class="sign" align="center">Sign in</p>
-  <form (ngSubmit)="login()" id="_loginForm" class="_loginFormAll">
+  <form *ngIf="!isRegistering" (ngSubmit)="login()" id="_loginForm" class="_loginFormAll">
+    <p class="sign" align="center">Sign in</p>
     <input class="username " type="text" id="username" [(ngModel)]="username" align="center" placeholder="Username" name="username">
     <input class="password" type="password" id="password" [(ngModel)]="password" align="center" placeholder="Password" name="password">
-    <a class="submit" align="center" (click)="login()">Sign in</a>
+    <a class="submit"  (click)="login()">Sign in</a>
+    <a class="register"  (click)="toggleRegister()">Register</a>
     <p class="forgot" align="center"><a href="#">Forgot Password?</a></p>
-  </form>       
+  </form> 
+  
+  <form *ngIf="isRegistering" (ngSubmit)="register()" id="_registerForm" class="_registerFormAll">
+    <p class="sign" align="center">Register</p>
+    <input class="firstName" type="text" id="firstName" [(ngModel)]="registerFirstName" align="center" placeholder="First Name" name="firstName">
+    <input class="lastName" type="text" id="lastName" [(ngModel)]="registerLastName" align="center" placeholder="Last Name" name="lastName">
+    <input class="email" type="email" id="email" [(ngModel)]="registerEmail" align="center" placeholder="Email ID" name="email">
+    
+    <select class="accountPurpose" [(ngModel)]="accountPurpose" (change)="onPurposeChange($event)" name="accountPurpose">
+      <option value="customer">Customer</option>
+      <option value="employee">Employee</option>
+      <option value="dealer">Dealer</option>
+    </select>
+
+    <div *ngIf="accountPurpose === 'employee'">
+      <label for="role">Role:</label>
+      <select class="role" [(ngModel)]="employeeRole" name="role">
+        <option value="staff">Staff</option>
+        <option value="admin">Admin</option>
+      </select>
+    </div>
+
+    <input class="register-password" type="password" id="registerPassword" [(ngModel)]="registerPassword" align="center" placeholder="Password" name="password">
+    <input class="confirmPassword" type="password" id="confirmPassword" [(ngModel)]="confirmPassword" align="center" placeholder="Confirm Password" name="confirmPassword">
+    
+    <a class="submit" (click)="register()">Register</a>
+    <a class="cancel" (click)="toggleRegister()">Cancel</a>
+  </form>
               
   </div>
