Logo redirction changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,9 @@
 <header>
   <nav>
     <div class="nav-left">
-      <img src="assets/Logo/MainLogo.png" alt="Company Logo" class="logo">
+      <a routerLink="/services-home">
+      <img src="assets/Logo/MainLogo.png" alt="Company Logo">
+      </a>
     </div>
     <div class="nav-right">
       <a routerLink="/login">Login</a>
