--- a/src/app/i-login-service/i-login-service.component.html
+++ b/src/app/i-login-service/i-login-service.component.html
@@ -9,7 +9,7 @@
       <img src="assets/Images/FarmImage3.jpg" alt="Banner Image 2">
     </div>
     <div class="banner-content">
-      <h1>Welcome to Our Services</h1>
+      <h1>Welcome to Kakarla Dairy Farm</h1>
       <p>Discover what we offer</p>
     </div>
   </div>
