--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -25,8 +25,12 @@ header {
   
   .logo {
     height: 50px;
-    /* Adjust the size as needed */
+    cursor: pointer; /* Indicates the element is clickable */
+    display: inline-block;
   }
+    /* Adjust the size as needed */
+  /* app.component.css or the relevant CSS file */
+
 
   .nav-right {
     display: flex;
