ilogin css and html changes

--- a/src/app/i-login/i-login.component.css
+++ b/src/app/i-login/i-login.component.css
@@ -42,7 +42,7 @@
 }
 
 .sign {
-    padding-top: 40px;
+    padding-top: 5%;
     color: #8C55AA;
     font-family: 'Ubuntu', sans-serif;
     font-weight: bold;
@@ -70,7 +70,24 @@ font-family: 'Ubuntu', sans-serif;
 }
 
 form._loginFormAll {
-    padding-top: 40px;
+    padding-top: 2%;
+    width: 100%;
+}
+
+form._registerFormAll{
+    padding-top: 2%;
+    width: 100%;
+}
+
+form._registerFormAll.firstname{
+    width:45%;
+    color: rgb(38, 50, 56);
+    font-weight: 700;
+    font-size: 14px;
+    margin-right: 5%;
+    letter-spacing: 1px;
+    background: rgba(136, 126, 126, 0.04);
+    padding: 10px 20px;
 }
 
 .password {
@@ -129,6 +146,23 @@ font-family: 'Ubuntu', sans-serif;
     padding-top: 10px;
     font-family: 'Ubuntu', sans-serif;
     margin-left: 3%;
+    font-size: 13px;
+    box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
+}
+
+submit-registration{
+    display: inline-block;
+    cursor: pointer;
+    border-radius: 5em;
+    color: #fff;
+    background: linear-gradient(to right, #9C27B0, #E040FB);
+    border: 0;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    font-family: 'Ubuntu', sans-serif;
+    margin-left: 40%;
     font-size: 13px;
     box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
 }
