--- a/src/app/i-login/i-login.component.html
+++ b/src/app/i-login/i-login.component.html
@@ -57,7 +57,7 @@
     <input class="register-password" type="password" id="registerPassword" [(ngModel)]="registerPassword" align="center" placeholder="Password" name="password">
     <input class="confirmPassword" type="password" id="confirmPassword" [(ngModel)]="confirmPassword" align="center" placeholder="Confirm Password" name="confirmPassword">
     
-    <a class="submit" (click)="register()">Register</a>
+    <a class="submit-registration" (click)="register()">Register</a>
     <a class="cancel" (click)="toggleRegister()">Cancel</a>
   </form>
               
