--- a/src/app/i-login/i-login.component.css
+++ b/src/app/i-login/i-login.component.css
@@ -1,44 +1,10 @@
-
-/* .loginContainer {
-    display: block;
-    justify-content: center;
-    align-items: center;
-    width: 300px;
-  border: 2px solid black;
-  vertical-align: middle;
-    margin: 0 auto;
-  margin-top: auto;
-} */
-
-/* ._loginFormAll {
-    background-color: darkolivegreen;
-    justify-content: center;
-    align-items: center;
-}
-
-._loginFormAll input {
-    background-color: aquamarine;
-}
-
-.loginContainer form{
-    display: table-cell;
-    vertical-align: middle;
-} 
-.loginContainer form .loginButton {
-    background-color: black;
-    color:bisque;
-    justify-content: center;
-    align-items: center;
-    margin-left: 50%;
-} */
-
 .loginContainer {
     background-color: #FFFFFF;
-    width: 400px;
-    height: 400px;
+    width: 500px;
     margin: 7em auto;
     border-radius: 1.5em;
     box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
+    padding-bottom: 2em;
 }
 
 .sign {
@@ -47,142 +13,146 @@
     font-family: 'Ubuntu', sans-serif;
     font-weight: bold;
     font-size: 23px;
+    text-align: center;
 }
 
-.username {
-width: 76%;
-color: rgb(38, 50, 56);
-font-weight: 700;
-font-size: 14px;
-letter-spacing: 1px;
-background: rgba(136, 126, 126, 0.04);
-padding: 10px 20px;
-border: none;
-border-radius: 20px;
-outline: none;
-box-sizing: border-box;
-border: 2px solid rgba(0, 0, 0, 0.02);
-margin-bottom: 50px;
-margin-left: 46px;
-text-align: center;
-margin-bottom: 27px;
-font-family: 'Ubuntu', sans-serif;
-}
-
-form._loginFormAll {
-    padding-top: 2%;
-    width: 100%;
-}
-
-form._registerFormAll{
-    padding-top: 2%;
-    width: 100%;
-}
-
-form._registerFormAll.firstname{
-    width:45%;
+.username,
+.password {
+    width: 76%;
     color: rgb(38, 50, 56);
     font-weight: 700;
     font-size: 14px;
-    margin-right: 5%;
     letter-spacing: 1px;
     background: rgba(136, 126, 126, 0.04);
     padding: 10px 20px;
+    border: none;
+    border-radius: 20px;
+    outline: none;
+    box-sizing: border-box;
+    border: 2px solid rgba(0, 0, 0, 0.02);
+    margin: 0 auto 27px auto;
+    display: block;
+    text-align: center;
+    font-family: 'Ubuntu', sans-serif;
 }
 
-.password {
-        width: 76%;
-color: rgb(38, 50, 56);
-font-weight: 700;
-font-size: 14px;
-letter-spacing: 1px;
-background: rgba(136, 126, 126, 0.04);
-padding: 10px 20px;
-border: none;
-border-radius: 20px;
-outline: none;
-box-sizing: border-box;
-border: 2px solid rgba(0, 0, 0, 0.02);
-margin-bottom: 50px;
-margin-left: 46px;
-text-align: center;
-margin-bottom: 27px;
-font-family: 'Ubuntu', sans-serif;
-}
-
-
-.username:focus, .password:focus {
+.username:focus,
+.password:focus,
+select.username:focus {
     border: 2px solid rgba(0, 0, 0, 0.18) !important;
-    
+}
+
+select.username {
+    width: 80%;
+    margin: 0 auto 27px auto;
+    display: block;
+    padding: 10px 20px;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 14px;
+    color: rgb(38, 50, 56);
+    border-radius: 20px;
+    border: 2px solid rgba(0, 0, 0, 0.02);
+    background-color: rgba(136, 126, 126, 0.04);
+    outline: none;
+    text-align: center;
+}
+
+form._loginFormAll,
+form._registerFormAll {
+    padding-top: 2%;
+    width: 100%;
+}
+
+.submit,
+.register,
+.cancel {
+    display: inline-block;
+    cursor: pointer;
+    border-radius: 5em;
+    color: #fff;
+    background: linear-gradient(to right, #9C27B0, #E040FB);
+    border: 0;
+    padding: 10px 40px;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 13px;
+    box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
+    text-align: center;
 }
 
 .submit {
-    display: inline-block;
-  cursor: pointer;
-    border-radius: 5em;
-    color: #fff;
-    background: linear-gradient(to right, #9C27B0, #E040FB);
-    border: 0;
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-bottom: 10px;
-    padding-top: 10px;
-    font-family: 'Ubuntu', sans-serif;
     margin-left: 20%;
-    font-size: 13px;
-    box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
 }
 
-.register{
-    display: inline-block;
-    cursor: pointer;
-    border-radius: 5em;
-    color: #fff;
-    background: linear-gradient(to right, #9C27B0, #E040FB);
-    border: 0;
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-bottom: 10px;
-    padding-top: 10px;
-    font-family: 'Ubuntu', sans-serif;
+.register {
     margin-left: 3%;
-    font-size: 13px;
-    box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
 }
 
-submit-registration{
-    display: inline-block;
-    cursor: pointer;
-    border-radius: 5em;
-    color: #fff;
-    background: linear-gradient(to right, #9C27B0, #E040FB);
-    border: 0;
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-bottom: 10px;
-    padding-top: 10px;
+.footer-links {
+    text-align: center;
+    margin-top: 15px;
+}
+
+.footer-links a {
+    margin: 0 10px;
+    text-decoration: none;
+    font-size: 13px;
     font-family: 'Ubuntu', sans-serif;
-    margin-left: 40%;
-    font-size: 13px;
-    box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
+    color: #E1BEE7;
+    cursor: pointer;
+    text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
 }
 
-.forgot {
-    text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
-    color: #E1BEE7;
-    padding-top: 15px;
+.footer-links .cancelLogin {
+    color: #FFCDD2;
 }
 
 a {
     text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
     color: #E1BEE7;
-    text-decoration: none
+    text-decoration: none;
 }
 
 @media (max-width: 600px) {
     .loginContainer {
         border-radius: 0px;
+        width: 90%;
     }
 }
-    
 
+/* Row layout for grouped inputs */
+.form-row {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+    margin-bottom: 27px;
+}
+
+/* Half-width input fields for registration */
+.half-input {
+    width: 38%;
+    color: rgb(38, 50, 56);
+    font-weight: 700;
+    font-size: 14px;
+    letter-spacing: 1px;
+    background: rgba(136, 126, 126, 0.04);
+    padding: 10px 20px;
+    border: none;
+    border-radius: 20px;
+    outline: none;
+    box-sizing: border-box;
+    border: 2px solid rgba(0, 0, 0, 0.02);
+    text-align: center;
+    font-family: 'Ubuntu', sans-serif;
+}
+
+.half-input:focus {
+    border: 2px solid rgba(0, 0, 0, 0.18);
+}
+
+/* Buttons row layout */
+.buttons-row {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 10px;
+}
