Add about us and contact us buttons in Navigation pane

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
       <a routerLink="/services-home">
         <img src="assets/Logo/MainLogo.png" alt="Company Logo" class="logo">
       </a>
+      <a routerLink="/services-home" class="nav-link">Services</a>
       <a routerLink="/about-us" class="nav-link">About Us</a>
       <a routerLink="/contact-us" class="nav-link">Contact Us</a>
     </div>
